css/main.css
/* ... */
.aside .logo a span {
  color: var(--text-black-900);
  font-weight: 400;
  letter-spacing: 1px;
  text-shadow: var(--text-black-300) 0px 0px 10px;
  font-size: 40px;
}
.aside .logo a::before {
  content: "";
  position: absolute;
  width: 40px;
  height: 40px;
  border-bottom: 5px solid var(--skin-color);
  border-left: 5px solid var(--skin-color);
  bottom: 0;
  left: 0;
  border-radius: 15%;
}
.aside .logo a::after {
  content: "";
  position: absolute;
  width: 40px;
  height: 40px;
  border-top: 5px solid var(--skin-color);
  border-right: 5px solid var(--skin-color);
  top: 0;
  right: 0;
  border-radius: 15%;
}
.aside .nav-toggler {
  display: none;
  justify-content: center;
  align-items: center;
  height: 40px;
  width: 45px;
  border: 1px solid var(--text-black-900);
  background: var(--bg-black-50);
  cursor: pointer;
  position: fixed;
  left: 300px;
  top: 20px;
  border-radius: 5px;
  transition: all 0.3s ease;
}
.aside .nav-toggler span {
  display: block;
  width: 18px;
  height: 2px;
  background-color: var(--skin-color);
  border-radius: 5px;
  *transform: translateY(-50%);
  display: inline-block;
  position: relative;
}
.aside .nav-toggler span::before {
  content: "";
  width: 18px;
  height: 2px;
  background-color: var(--skin-color);
  border-radius: 5px;
  *transform: translateY(-50%);
  position: absolute;
  top: -6px;
  left: 0;
}
.aside .nav-toggler span::after {
  content: "";
  width: 18px;
  height: 2px;
  background-color: var(--skin-color);
  border-radius: 5px;
  *transform: translateY(-50%);
  position: absolute;
  bottom: -6px;
  right: 0;
}
.aside .nav-toggler.open {
  transform: scale(-1.1);
}
.aside .nav-toggler.open span::before {
  transform: rotate(45deg);
  top: 0;
}
.aside .nav-toggler.open span::after {
  transform: rotate(-45deg);
  top: 0;
}
.aside .nav {
  width: 100%;
  height: calc(80% - 100px);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  padding: 5px 0;
  margin-top: 200px;
}
.aside .nav li {
  width: 100%;
  height: 30px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 16px;
  font-weight: 600;
  color: var(--text-black-700);
  text-transform: capitalize;
  letter-spacing: 3px;
  text-shadow: var(--text-black-300) 0px 0px 3px;
  border-bottom: 1px solid var(--text-black-300);
}
.aside .nav li a {
  position: relative;
  padding: 0 10px;
  color: var(--text-black-700);
  text-decoration: none;
  transition: all 0.5s ease-in-out;
}
.aside .nav li a.active {
  color: var(--skin-color);
  text-shadow: var(--text-black-300) 0px 0px 16px;
  transition: all 0.5s ease-in-out;
}

/* Btn */
.btn {
  display: inline-block;
  font-weight: 500;
  padding: 12px 30px;
  font-size: 16px;
  line-height: 1.5;
  border-radius: 15px;
  color: var(--bg-black-900);
  background-color: var(--skin-color);
  white-space: nowrap;
  border: none;
}
.btn:hover {
  transform: scale(1.1);
  color: var(--text-black-700);
  background-color: var(--bg-black-100);
  border-color: var(--bg-black-100);
  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

/* Start Switcher */
.style-switcher {
  position: fixed;
  right: 0;
  top: 50px;
  padding: 15px;
  width: 250px;
  border: 1px solid var(--skin-color);
  background: var(--bg-black-100);
  z-index: 101;
  border-radius: 15px;
  margin-right: 5px;
  transition: all 0.3s ease;
  transform: translateX(100%);
}
.style-switcher.open {
  cursor: pointer;
  transform: translateX(0);
  transition: all 0.5s ease;
  /* se puede usar la seudoclase hoover */
}
.style-switcher .s-icon {
  position: absolute;
  height: 40px;
  width: 40px;
  text-align: center;
  font-size: 20px;
  background: var(--bg-black-100);
  color: var(--text-black-100);
  right: 100%;
  border: 1px solid var(--skin-color);
  margin-right: 25px;
  border-radius: 50%;
  box-shadow: 0 0 5px var(--skin-color);
  cursor: pointer;
  transition: all 0.3s ease;
}
.style-switcher .s-icon i {
  line-height: 40px;
}
.style-switcher .s-icon:hover {
  transform: scale(1.1);
}
.style-switcher .style-switcher-toggler {
  top: 0;
}
.style-switcher .light-mode {
  top: 60px;
}
.style-switcher h4 {
  margin: 0 0 10px;
  color: var(--text-black-100);
  font-size: 16px;
  font-weight: 600;
  text-transform: capitalize;
}
.style-switcher .colors {
  margin: 0;
  padding: 0;
  list-style: none;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
}
.style-switcher .colors span {
  display: block;
  width: 32px;
  height: 32px;
  margin: 0 5px;
  border-radius: 50%;
}
.style-switcher .color {
  background-color: rgb(0, 255, 0);
}
.style-switcher .color1 {
  background-color: rgb(255, 0, 0);
}
.style-switcher .color2 {
  background-color: rgb(0, 0, 255);
}
.style-switcher .color3 {
  background-color: rgb(255, 255, 0);
}
.style-switcher .color4 {
  background-color: rgb(0, 255, 255);
}

/* End Switcher */
/* WhatsApp Widdeg - Start */
#whatsAppWidget {
  position: fixed;
  display: inline;
  text-align: center;
  line-height: 50px;
  right: 20px;
  bottom: 3px;
  float: left;
  margin-bottom: 60px;
  z-index: 20;
}

#whatsAppWidget .whatsapp-widget {
  float: right;
  height: 50px;
  width: 50px;
  border-radius: 50%;
  overflow: hidden;
  box-shadow: 2px 2px 6px var(--skin-color);
  text-align: center;
  line-height: 50px;
  color: #fff;
  background-color: #333;
  margin-right: 10px;
}

#whatsAppWidget .whatsapp-widget svg {
  display: inline;
  justify-content: center;
  align-items: center;
  fill: #1fe515;
  width: 41px;
  height: 50px;
}

#whatsAppWidget .whatsapp-widget svg:hover {
  fill: #fff;
  transition: all 300ms ease;
  width: 45px;
  height: 54px;
}
/* ... */

